# arteria

./: .coveragerc  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
arteria/: __init__.py
arteria/config_schemas/: schema_arteria_runfolder.py
arteria/handlers/: archive_services_handlers.py  arteria_runfolder_handlers.py  base.py
arteria/models/: config.py  runfolder_utils.py  state.py
arteria/services/: archive_services.py  arteria_runfolder.py  base_service.py
tests/: .pylintrc
tests/fixtures/: integration_fixtures.py
tests/integration/: test.py  test_archive_services.py  test_arteria_runfolder.py
tests/resources/: RunParameters_MiSeq.xml  RunParameters_NSXp.xml
tests/resources/config/: logger.config
tests/unit/: test_config.py  test_runfolder_utils.py
