[tool.poetry]
name = "arteria"
version = "0.1.0"
description = ""
authors = ["SNP&SEQ Technology Platform <dataoperations@medsci.uu.se>"]
license = "LICENCE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.5"
xmltodict = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-aiohttp = "^1.0.5"
pytest-cov = "^5.0.0"
coverage = "^7.5.4"

pylint = "^3.2.4"
flake8 = "^7.1.0"
flake8-pyproject = "^1.2.3"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
arteria-runfolder = "arteria.services.arteria_runfolder:main"

[tool.flake8]
max-line-length = 100
